Upgraded Spring boot starter version & more...  - Improved Docker Configuration.  - Improved build.gradle.  - Other code enhancements.